@@ -1,0 +1,25 @@
+<ivy-module version="1.1">
+
+    <info organisation="org.springframework" module="spring-ws-echo-sample"/>
+
+    <configurations>
+		<conf name="default" extends="global"/>
+		<conf name="global" visibility="private"/>
+		<conf name="buildtime" visibility="private"/>
+		<conf name="test" visibility="private"/>
+    </configurations>
+
+    <dependencies defaultconf="global->default">
+    	<!-- global (compile, test, runtime) dependencies -->
+	    <dependency org="apache" name="commons-logging" rev="1.0.4"/>
+    	<dependency org="apache" name="log4j" rev="1.2.9"/>
+        <dependency org="org.springframework" name="spring-ws-core" rev="latest.integration" conf="global->default,saaj"/>
+		<!-- build time only dependencies -->
+
+        <!-- test time only dependencies -->
+        <dependency org="junit" name="junit" rev="3.8.1" conf="test->default"/>
+	    <dependency	org="clover" name="clover" rev="1.3.11" conf="test->default" />
+        <dependency org="xmlunit" name="xmlunit" rev="1.0" conf="test->default"/>
+        <dependency org="easymock" name="easymock" rev="1.1" conf="test->default"/>
+    </dependencies>
+</ivy-module>
