@@ -1,0 +1,16 @@
+log4j.rootCategory=WARN, stdout, logfile
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
+
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=${@PROJECT_NAME@.root}/@PROJECT_NAME@.log
+log4j.appender.logfile.MaxFileSize=512KB
+
+# Keep three backup files
+log4j.appender.logfile.MaxBackupIndex=3
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+
+#Pattern to output : date priority [category] - <message>line_separator
+log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - <%m>%n
