@@ -1,0 +1,34 @@
+/*
+ * Copyright (c) 2006, Your Corporation. All Rights Reserved.
+ * Copyright 2006 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.springframework.ws.samples.echo.service;
+
+/**
+ * Defines the "business logic" of the web service.
+ *
+ * @author Ingo Siebert
+ * @author Arjen Poutsma
+ */
+public interface EchoService {
+
+    /**
+     * Returns the given string.
+     *
+     * @return <code>s</code>
+     */
+    String echo(String s);
+}
