@@ -1,0 +1,43 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<wsdl:definitions xmlns:wsdl="http://schemas.xmlsoap.org/wsdl/"
+                  xmlns:tns="http://www.springframework.org/spring-ws/samples/echo"
+                  xmlns:wsdlsoap="http://schemas.xmlsoap.org/wsdl/soap/" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                  targetNamespace="http://www.springframework.org/spring-ws/samples/echo">
+
+    <wsdl:import namespace="http://www.springframework.org/spring-ws/samples/echo" location="echo.xsd"/>
+
+    <wsdl:message name="echoRequest">
+        <wsdl:part name="echoString" element="tns:echoRequest"/>
+    </wsdl:message>
+
+    <wsdl:message name="echoResponse">
+        <wsdl:part name="theEcho" element="tns:echoResponse"/>
+    </wsdl:message>
+
+    <wsdl:portType name="TestServicePortType">
+        <wsdl:operation name="echo">
+            <wsdl:input message="tns:echoRequest" name="echoRequest"/>
+            <wsdl:output message="tns:echoResponse" name="echoResponse"/>
+        </wsdl:operation>
+    </wsdl:portType>
+
+    <wsdl:binding name="TestServiceHttpBinding" type="tns:TestServicePortType">
+        <wsdlsoap:binding style="document" transport="http://schemas.xmlsoap.org/soap/http"/>
+        <wsdl:operation name="echo">
+            <wsdlsoap:operation soapAction=""/>
+            <wsdl:input name="echoRequest">
+                <wsdlsoap:body use="literal"/>
+            </wsdl:input>
+            <wsdl:output name="echoResponse">
+                <wsdlsoap:body use="literal"/>
+            </wsdl:output>
+        </wsdl:operation>
+    </wsdl:binding>
+
+    <wsdl:service name="TestService">
+        <wsdl:port binding="tns:TestServiceHttpBinding" name="TestServiceHttpPort">
+            <wsdlsoap:address location="http://localhost:8080/echo/services"/>
+        </wsdl:port>
+    </wsdl:service>
+</wsdl:definitions>
+
