@@ -1,0 +1,14 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="Author" content="Ingo Siebert">
+   <title>Spring WS test page</title>
+</head>
+<body bgcolor="#FFFFFF">
+<h1>Spring-WS Echo</h1>
+If you see this page, the WAR deployment was successful.
+</body>
+</html>
+
