@@ -2,4 +2,6 @@ SPRING WEB SERVICES
 
 Sample table of contents
 ---------------------------------------------------
-* airline - A simple airline sample that shows both Web Service and O/X Mapping functionality
+* airline - A complete airline sample that shows both Web Service and O/X Mapping functionality in a complete application
+
+* basic - A simple sample that shows a bare-bones Echo service
