@@ -32,6 +32,9 @@ Package org.springframework.xml.transform
 Package org.springframework.xml.xpath
 * added XPath abstraction with support for JAXP 1.3, Jaxen, and Xalan
 
+Samples
+* Added Ingo Siebert's Echo sample
+
 
 Changes in version 0.9.1 (06.04.2006)
 -------------------------------------
